bad/method_call_too_few_arguments.example_compiler_output
ERROR
[1mbad/method_call_too_few_arguments.lat:3:13: [1;31merror: [0;1mtoo few arguments to function call, expected 2, have 1[m
	(new G).foo(42);
	           [1;32m^[m
[1mbad/method_call_too_few_arguments.lat:8:2: [1;34mnote: [0;1m`foo` declared here[m
	void foo(int x, string y) {}
	[1;32m^[m
